--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -153,6 +153,9 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html {
+    font-size: 125%;
+  }
   body {
     @apply bg-background text-foreground;
   }
