--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -109,7 +109,7 @@
 }
 
 @theme inline {
-  --font-sans: var(--font-geist-sans);
+  --font-sans: "Gilroy, sans-serif";
   --font-mono: var(--font-geist-mono);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -160,7 +160,7 @@
     @apply bg-background text-foreground;
   }
   h1, h2, h3, h4, h5, h6 {
-    font-family: 'gilroyextrabold-400';
+    font-family: "Gilroy, sans-serif";
   }
 }
 
